# gdb_cli

./: README.md  pyproject.toml
skills/gdb-debugging/: SKILL.md
skills/gdb-debugging/references/: commands.md
src/gdb_cli/: __init__.py  cli.py  client.py  output_parser.py  server.py
tests/: test_cli.py  test_e2e.py  test_output_parser.py  test_session.py
