[project]
name = "gdb-cli"
version = "0.1.0"
description = "GDB CLI for AI Agent - A GDB debugging tool with structured JSON output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pexpect>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
gdb-cli = "gdb_cli.cli:main"
gdb-cli-server = "gdb_cli.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gdb_cli"]

[tool.uv]
dev-dependencies = ["pytest>=8.0"]
